@@ -17,14 +17,28 @@
 #include "gui/widgets/scroll_label.hpp"
 
 #include "gui/widgets/label.hpp"
+#include "gui/auxiliary/log.hpp"
 #include "gui/widgets/scrollbar.hpp"
 #include "gui/widgets/spacer.hpp"
+#include "gui/widgets/window.hpp"
+
+#include <boost/bind.hpp>
+
+#define LOG_SCOPE_HEADER get_control_type() + " [" + id() + "] " + __func__
+#define LOG_HEADER LOG_SCOPE_HEADER + ':'
 
 namespace gui2 {
+
 tscroll_label::tscroll_label()
 	: tscrollbar_container(COUNT)
 	, state_(ENABLED)
 {
+	connect_signal<event::LEFT_BUTTON_DOWN>(
+			  boost::bind(
+				    &tscroll_label::signal_handler_left_button_down
+				  , this
+				  , _2)
+			, event::tdispatcher::back_pre_child);
 }
 
 void tscroll_label::set_label(const t_string& label)
@@ -74,6 +88,13 @@ const std::string& tscroll_label::get_control_type() const
 {
 	static const std::string type = "scroll_label";
 	return type;
+}
+
+void tscroll_label::signal_handler_left_button_down(const event::tevent event)
+{
+	DBG_GUI_E << LOG_HEADER << ' ' << event << ".\n";
+
+	get_window()->keyboard_capture(this);
 }
 
 } // namespace gui2
