@@ -33,6 +33,8 @@ Version 1.7.13+svn:
    * Fix a crash when using the scrollwheel (bug #15156)
    * Fix an issue where the lobby chat log didn't resize properly
    * Fix the translation of certain lobby strings
+   * Enable the scrollwheel for the tree view
+   * Enable the scrollwheel for the scroll label
  * Miscellaneous and bug fixes:
    * Fix bug #15429 (Units created by WML can only get the Neutral alignment);
      this also affected MP leaders
